  [Michele Simionato]
  * Added a command `oq compare` to compare hazard curves and maps within
    calculations
  * Extended the engine to read transparently zipped source models and exposures
  * Restored the check for invalid source IDs in applyToSources
  * Extended the command `oq zip` to zip source models and exposures
  * Parallelized the associations event ID -> realization ID
  * Improved the message when assets are discarded in scenario calculations
  * Implemented aggregation by multiple tags, plus a special case for the
    country code in event based risk

  [Marco Pagani]
  * Added two modified versions of the Bindi et al. (2011) to be used in a
    backbone approach to compute hazard in Italy

  [Michele Simionato]
  * Changed the way loss curves and loss maps are stored in order to unify
    the aggregation logic with the one used for the average losses
  * Now it is possible to compute the ruptures without specifying the sites
  * Added an early check for the case of missing intensity measure types
  * Deprecated the case of exposure, site model and region_grid_spacing all
    set at the same time
  * Implemented multi-exposure functionality in event based risk
  * Changed the event based calculator to store the ruptures incrementally
    without keeping them all in memory
  * Refactored the UCERF event based calculator to work as much as possible
    the regular calculator
  * Optimized the management and storage of the aggregate losses in the event
    based risk calculation; also, reduced the memory consumption
  * Changed the default for `individual_curves` to "false", which is the right
    default for large calculations
  * Optimized the saving of the events
  * Removed the `save_ruptures` flag in the job.ini since ruptures must be saved
    always
  * Optimized the rupture generation in case of sampling and changed the
    algorithm and seeds
  * Fixed a bug with the IMT `SA(1)` considered different from `SA(1.0)`